--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,7 +1,12 @@
 .chart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+}
+p {
+	position: absolute;
+	bottom: 10px;
 }
